Fixed broken layout for mobile

--- a/APT/styles/apt.css
+++ b/APT/styles/apt.css
@@ -72,10 +72,9 @@ article .bg_pointed { --bg-basic: rgb(var(--cpl) / 15%); --bg-hover: rgb(var(--c
 
 
 /* Data related styles */
-main#staticDoc > section#apart > div.container > article[data-article-id="main"] { position: relative; min-width: 100%; }
 @media all and (min-height: 700px) and (min-width: 740px) {
 main#staticDoc > section#apart > div.container > article { height: fit-content; }
-main#staticDoc > section#apart > div.container > article[data-article-id="main"] { min-height: 140px; }
+main#staticDoc > section#apart > div.container > article[data-article-id="main"] { position: relative; min-width: 100%; min-height: 140px; }
 }
 
 main#staticDoc > section#home > div.container > article > iframe { width: 100%; height: 100%; }
